<resources>
    <string name="app_name">Revisión de Equipamiento</string>

    <!-- Titulos de Pantallas-->
    <string name="title_activity_main">Revisiones</string>
    <string name="title_activity_Pregunta">Preguntas</string>
    <string name="title_activity_Busqueda">Buscar Equipamiento</string>
    <string name="title_activity_Datos">Estado</string>
    <string name="title_activity_Firma">Firma</string>
    <string name="title_activity_Ajustes">Ajustes</string>

    <!-- Pantalla Login -->
    <string name="login">Log In</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="user_id">user_id</string>
    <string name="olvidoContraseña">¿Has olvidado la contraseña?</string>

    <!-- Pantalla Principal -->
    <string name="tab_text_1">Próximas</string>
    <string name="tab_text_2">Reparación</string>
    <string name="tab_text_3">No Enviadas</string>
    <string name="action_settings">Ajustes</string>
    <string name="emptyPma">No hay próximas revisiones.</string>
    <string name="emptyReparacion">Ningún equipamiento en reparación.</string>
    <string name="emptyEnviado">Todas las revisiones están enviadas.</string>

    <!-- Pantalla Ajustes -->
    <string name="aj_cambiarContra_bt">Cambiar Contraseña</string>
    <string name="aj_cambiarContra_tx">Cambiar de contraseña</string>
    <string name="aj_infoContraseña_tx">Introduce tu actual contraseña y la nueva.</string>
    <string name="aj_contraActual_edt">Contraseña Actual</string>
    <string name="aj_contraNueva_edt">Contraseña Nueva</string>
    <string name="aj_contraNuevaR_edt">Repetir Contraseña </string>
    <string name="aj_bRevisiones_bt" >Borrar Revisiones Guardadas</string>
    <string name="version">Versión:</string>

    <!-- Pantalla Equipamiento -->
    <string name="eqpTrabajador">Trabajador:</string>
    <string name="eq_marca_modelo_tx">Marca/Modelo:</string>
    <string name="eq_zona_tx">Zona:</string>
    <string name="eq_ubicacion_tx">Ubicación:</string>
    <string name="eq_estado_tx">Estado:</string>
    <string name="eq_idreemplaza_tx">Nºserie reemplaza:</string>
    <string name="eq_situacion_tx">Situación:</string>
    <string name="eq_referenciaN_tx">Referencia Normativa:</string>
    <string name="eq_bitacora_tx">Histórico:</string>
    <string name="eq_fecha_tx">Fechas</string>
    <string name="eq_fechaPR_tx">Próxima revisión:</string>
    <string name="eq_fechaR_tx">Última revisión:</string>
    <string name="eq_fechaC_tx">Adquisición:</string>
    <string name="eq_fechaPF_tx">Funcionamiento:</string>
    <string name="eq_fechaCaducidad_tx">Caducidad:</string>
    <string name="eq_fechaBaja_tx">Baja:</string>
    <string name="estadoBien">Aceptable</string>
    <string name="estadoReparacion">En reparación</string>
    <string name="estadoBaja">De baja</string>
    <string name="noTrabajador">No asiganado</string>

    <!-- Pantalla Busqueda -->
    <string name="filtro">Filtros</string>
    <string name="nofiltros">No se han encontrado equipamientos que concuerden.</string>
    <string name="nserieHint">Nºserie</string>
    <string name="n_serie">Nºserie</string>
    <string name="spnr_familia">----Familia----</string>
    <string name="spnr_zona">----Zona----</string>
    <string name="spnr_ubicacion">----Ubicación----</string>
    <string name="spnr_trabajador">----Trabajador----</string>
    <string name="spnr_marca">----Marca----</string>
    <string-array name="fechas_sp">
        <item>----Fecha----</item>
        <item>1 Semana</item>
        <item>1 Mes</item>
        <item>3 Meses</item>
        <item>6 Meses</item>
    </string-array>

    <!-- Pantalla Preguntas -->
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="no_aplica">N.a.</string>
    <string name="obs">Observaciones</string>
    <string name="informacion">Información</string>

    <!-- Pantalla Datos -->
    <string name="dt_fotos_tx">Fotos</string>
    <string name="dt_objecione_tx">Objeciones del Trabajador:</string>
    <string name="dt_peticiones_tx">Firma y observaciones del usuario:</string>
    <string name="dt_estado_tx">Estado:</string>
    <string-array name="estados_sp">
        <item>-----------</item>
        <item>Aceptable</item>
        <item>Reparación</item>
        <item>Baja</item>
    </string-array>

    <!-- Pantalla Firma -->
    <string name="firmeaqui">Firme aquí:</string>

    <!-- URLS-->
    <!--<string name="URL">http://emproacsa.mjhudesings.com/</string>-->
    <string name="URL">https://www.emproacsa-revisionequipamientos.com/</string>
    <string name="URLinicio">slim/login</string>
    <string name="URLemail">slim/email</string>
    <string name="URLtodo">slim/todo/</string>
    <string name="URLcontraseña">slim/cambiocontrasena</string>
    <string name="URLinsert">slim/insertrevision</string>
    <string name="URLCompruebaDescargaPDF">slim/compruebaRevision/</string>
    <string name="URLDescargaPDF">slim/descargarpdf/</string>
    <string name="URLversion">slim/descargarversion/</string>

    <!-- CardView -->
    <string name="familiaCard">Familia:</string>
    <string name="nserieCard">Nº Serie:</string>
    <string name="ubicacionCard">Ubicación:</string>
    <string name="fechaCard">Fecha:</string>
    <string name="trabajadorCard">Trabajador:</string>

    <!-- Dialogs-->
    <string name="permisoD">Permisos denegados</string>
    <string name="permisoInfo">Para usar las funciones de la app necesitas aceptar los permisos.</string>
    <string name="noInternet">No tienes Internet</string>
    <string name="noInternetInfo">No puedes enviar o recibir datos si no tienes internet en tu dispositivo.</string>
    <string name="cerrarSesion">¿Cerrar Sesion?</string>
    <string name="cerrarSesionInfo">Los datos almacenados en su dispositivo se borrarán.</string>
    <string name="salirNoGuardar">¿Seguro que quieres salir?</string>
    <string name="salirNoGuardarInfo">Se perderán los datos si no han sido guardados.</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicar">Aplicar</string>
    <string name="seleccionFoto">Selecciona</string>
    <string name="seleccionFotoGaleria">Galería</string>
    <string name="seleccionFotoCamara">Cámara</string>
    <string name="enviarTitulo">Enviar Revisión</string>
    <string name="enviarInfo">¿Quieres enviar la revisión directamente?</string>
    <string name="lg_tituloEmail">Introduce tu email</string>
    <string name="lg_infoEmail">Recibirás un email con un enlace para recuperar tu contraseña</string>
    <string name="lg_email_hint">Email</string>
    <string name="aj_bRevi">¿Borrar Revisiones?</string>
    <string name="aj_bReviInfo">Todos los datos de las revisiones realizadas se borraran.</string>
    <string name="nuevaV">Descargar nueva Versión</string>


    <!-- Toast -->
    <string name="loginError">Usuario o contraseña no válidos</string>
    <string name="actualizar">Actualización Correcta</string>
    <string name="errorBD">Error en la Base de Datos</string>
    <string name="contraseñaOK">Contraseña Actualizada</string>
    <string name="emailOK">Se te ha enviado un email</string>
    <string name="emailError">Email no encontrado</string>
    <string name="noFirmado">No firmado</string>
    <string name="noFirmadoT">Trabajador no firmado</string>
    <string name="errorSesion">Error al enviar, por favor reinicie la sesión</string>

    <!-- Buttons -->
    <string name="descarga_revi_bt">Descargar</string>
    <string name="enviarRV_bt">Enviar</string>
    <string name="siguiente">Siguiente</string>
    <string name="Guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="foto">foto</string>
    <string name="ajustes">ajustes</string>
    <string name="info">info</string>
    <string name="acercade">Acerca de</string>
    <string name="salir">salir</string>
    <string name="firmar">Firmar</string>


    <!-- Errores -->
    <string name="err_campoVacio">Campo vacío</string>
    <string name="err_campoNoIgual">Los campos no concuerdan</string>
    <string name="err_campoPSW">La contraseña debe contener entre 8 y 16 caracteres con una minúscula, una mayúscula, un número y un caracter especial</string>
    <string name="err_NoEstado">Debes elegir un estado</string>


</resources>
