<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".FirmaActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancelarbt"
                style="@style/ButtonNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/cancelar" />

            <Button
                android:id="@+id/borrarbt"
                style="@style/ButtonNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/borrar" />

            <Button
                android:id="@+id/firmadobt"
                style="@style/ButtonNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:text="@string/Guardar" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/textBlanco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"

                    android:text="@string/firmeaqui"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/firmaLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:orientation="vertical" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>