<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EquipamientoActivity"
    tools:showIn="@layout/activity_equipamiento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="85dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                style="@style/textBlanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eqpTrabajador" />

            <TextView
                android:id="@+id/eq_trabajador_tx"
                style="@style/textBlancoNegritaMini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorBlanco"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text2"
                    style="@style/textNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq_marca_modelo_tx" />

                <TextView
                    android:id="@+id/eq_marca_modelo_tx"
                    style="@style/textNegroNegrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text4"
                    style="@style/textNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq_zona_tx" />

                <TextView
                    android:id="@+id/eq_zona_tx"
                    style="@style/textNegroNegrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text8"
                    style="@style/textNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq_ubicacion_tx" />

                <TextView
                    android:id="@+id/eq_ubicacion_tx"
                    style="@style/textNegroNegrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text7"
                    style="@style/textNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq_situacion_tx" />

                <TextView
                    android:id="@+id/eq_situacion_tx"
                    style="@style/textNegroNegrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorBlanco"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text3"
                    style="@style/textNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq_estado_tx" />

                <TextView
                    android:id="@+id/eq_estado_tx"
                    style="@style/textNegroNegrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text5"
                    style="@style/textNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq_idreemplaza_tx" />

                <TextView
                    android:id="@+id/eq_idremplaza_tx"
                    style="@style/textNegroNegrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorBlanco"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_fechas1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="auto"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/ic_action_calendar_month" />

                <TextView
                    android:id="@+id/fechas_ddd"
                    style="@style/textAzul"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/eq_fecha_tx" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_fechas2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorBlanco"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text99"
                        style="@style/textNegro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eq_fechaPR_tx" />

                    <TextView
                        android:id="@+id/eq_fechaPR_tx"
                        style="@style/textNegroNegrita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text93"
                        style="@style/textNegro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eq_fechaR_tx" />

                    <TextView
                        android:id="@+id/eq_fechaR_tx"
                        style="@style/textNegroNegrita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text98"
                        style="@style/textNegro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eq_fechaC_tx" />

                    <TextView
                        android:id="@+id/eq_fechaC_tx"
                        style="@style/textNegroNegrita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text92"
                        style="@style/textNegro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eq_fechaPF_tx" />

                    <TextView
                        android:id="@+id/eq_fechaPF_tx"
                        style="@style/textNegroNegrita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text95"
                        style="@style/textNegro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eq_fechaCaducidad_tx" />

                    <TextView
                        android:id="@+id/eq_fechaCaducidad_tx"
                        style="@style/textNegroNegrita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text933"
                        style="@style/textNegro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eq_fechaBaja_tx" />

                    <TextView
                        android:id="@+id/eq_fechaBaja_tx"
                        style="@style/textNegroNegrita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/colorBlanco"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text9"
                    style="@style/textNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq_referenciaN_tx" />

                <TextView
                    android:id="@+id/eq_referenciaN_tx"
                    style="@style/textNegroNegrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text10"
                    style="@style/textNegro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eq_bitacora_tx" />

                <TextView
                    android:id="@+id/eq_bitacora_tx"
                    style="@style/textNegroNegrita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

